🚧 🌐 i18n: Clean up unused translation keys / machine-translated i18n #92

--- a/apps/frontend/src/i18n/bn.json
+++ b/apps/frontend/src/i18n/bn.json
@@ -53,7 +53,6 @@
     "deleteSession": "মুছে দিন",
     "downloadAll": "সব সেশন ডাউনলোড করুন",
     "downloading": "ডাউনলোড হচ্ছে",
-    "edit": "সম্পাদনা করুন",
     "email": "ইমেইল",
     "example": "উদাহরণ কোড",
     "generateContent": "বিদ্যমান বিষয়বস্তু থেকে নতুন সামগ্রী তৈরি করুন",
@@ -110,8 +109,7 @@
     "writeMetadata": "এখানে আপনার মেটাডেটা লিখুন"
   },
   "dialogue": {
-    "Introduction": "হাই! \nকি করতে হবে তা চয়ন করতে আপনার প্রশ্নের টাইপের দ্রুত উত্তর বোতামে ক্লিক করুন!",
-    "NewSessionWithData": "সংরক্ষিত ডেটা দিয়ে নতুন অধিবেশন শুরু করা হচ্ছে"
+    "Introduction": "হাই! \nকি করতে হবে তা চয়ন করতে আপনার প্রশ্নের টাইপের দ্রুত উত্তর বোতামে ক্লিক করুন!"
   },
   "editor": {
     "dialogueTab": "চ্যাট",
@@ -123,8 +121,7 @@
   },
   "execSwitch": {
     "Running": "চলছে",
-    "Stopped": "থেমে গেল",
-    "label": "কোড চালান"
+    "Stopped": "থেমে গেল"
   },
   "extension": {
     "minecraft-core": {
@@ -139,9 +136,7 @@
     "text": "পাঠ্য",
     "websocketNotConnected": "ওয়েবসকেট সংযুক্ত নয়"
   },
-  "logbuffer": {
-    "tooManyLogs": "অনেক বার্তা। \nপুরানো লগ মুছে ফেলা হয়েছে।"
-  },
+  "logbuffer": {},
   "login": {
     "login": "লগইন করুন",
     "loginFailed": "লগইন ব্যর্থ হয়েছে",
@@ -173,11 +168,8 @@
     "passwordDescription": "আপনার পাসওয়ার্ড টাইপ করুন"
   },
   "navbar": {
-    "connected": "সংযুক্ত",
     "execSwitch": "কোড চালান",
-    "home": "বাড়ি",
     "joinCode": "কোড যোগদান",
-    "leave": "ছেড়ে",
     "noTutorial": "কোন টিউটোরিয়াল নির্বাচন করা হয়নি",
     "reconnecting": "সংযোগ বিচ্ছিন্ন \nপুনরায় সংযোগ করার চেষ্টা করছে।",
     "reload": "পুনরায় লোড করুন",
@@ -186,11 +178,7 @@
   },
   "off": "বন্ধ",
   "on": "চালু",
-  "quickReply": {
-    "BeginTutorial": "টিউটোরিয়াল শুরু করুন",
-    "HowToUse": "এটা কিভাবে ব্যবহার করবেন?",
-    "WhatINeed": "আমি কি করতে হবে?"
-  },
+  "quickReply": {},
   "session": {
     "about": "এই অ্যাপ সম্পর্কে",
     "aboutText": "এই অ্যাপ্লিকেশনটি স্ব-হোস্টেড সফ্টওয়্যার যা LLM (AI) ব্যবহার করে টিউটোরিয়াল প্রদান করে।  \nঅ্যাপ্লিকেশনটি সাইট অ্যাডমিনিস্ট্রেটরকে ব্যবহারকারীর ব্যবহার এবং অ-ব্যক্তিগতভাবে শনাক্তযোগ্য ফর্মে করা বিবৃতিগুলির ডেটা সংগ্রহ করার অনুমতি দেয় এবং সংগৃহীত ডেটা অ্যাপে চ্যাট ফাংশন শিখতে এবং AI-এর আচরণ উন্নত করতে ব্যবহার করা হয়।  \nঅ্যাপ দ্বারা প্রদত্ত ডেটা পরিচালনার বিষয়ে আরও তথ্যের জন্য, অনুগ্রহ করে ওয়েবসাইট প্রশাসকের সাথে যোগাযোগ করুন। \nযেহেতু অ্যাপ্লিকেশনটি ওপেন সোর্স হিসাবে প্রকাশিত হয়েছে এবং সোর্স কোডটি সংশোধন করা হয়েছে, তাই ওয়েবসাইট প্রশাসক অজানা থাকলে অ্যাপ্লিকেশনটি ব্যবহার না করার পরামর্শ দেওয়া হচ্ছে।  \nতৈরি করা সেশন সম্পর্কে তথ্যের ডেটা মুছে ফেলা হতে পারে।",
@@ -203,13 +191,8 @@
     "deleteSession": "এই অধিবেশন মুছুন",
     "findSavedSession": "সংরক্ষিত ডেটা ব্যবহার করুন",
     "hello": "হ্যালো",
-    "joinsession": "কোড দিয়ে যোগ দিন",
-    "noSavedSession": "কোনো সংরক্ষিত সেশন পাওয়া যায়নি",
-    "or": "বা",
     "savedSession": "সেভ করা সেশন",
-    "serverDownMsg": "সার্ভার সংযোগ করতে পারে না. \nআপনার ইন্টারনেট চেক করুন বা সিস্টেম অ্যাডমিনিস্ট্রেটরকে জিজ্ঞাসা করুন।",
     "serverOffline": "সার্ভার অফলাইন - অ্যাপ অনুপলব্ধ৷",
-    "serverOnline": "অনলাইন",
     "sessionNotFoundMsg": "সেশন পাওয়া যায়নি. \nঅন্য কোড টাইপ করুন বা শুরু করতে একটি নতুন সেশন তৈরি করুন।",
     "typecodeMsg": "আপনার কোড টাইপ করুন, বা শুরু করতে নতুন রুম তৈরি করুন।",
     "welcome": "AI এর সাথে কোডিং অধ্যয়ন করুন",
@@ -230,20 +213,15 @@
   "textbubble": {
     "ai": "এআই",
     "ask": "কিছু জিজ্ঞাসা করুন...",
-    "block": "ব্লক",
-    "blocksuggestions": "প্রস্তাবিত ব্লক",
-    "copiedToClipboard": "কপি করা !",
     "errorLog": "ত্রুটি লগ",
     "findBlock": "ব্লক খুঁজুন",
-    "findBlockFromMenu": "মেনু থেকে খুঁজুন",
     "log": "লগ",
     "replying": "উত্তর দেওয়া হচ্ছে...",
     "server": "সার্ভার",
     "showingLatest": "সর্বশেষ {{count}}টি বার্তা দেখানো হচ্ছে৷",
     "you": "আপনি",
     "audioMode": "অডিও মোড",
-    "transcribing": "প্রতিলিপি করা হচ্ছে...",
-    "transcriptionFailed": "প্রতিলিপি অনুপলব্ধ"
+    "transcribing": "প্রতিলিপি করা হচ্ছে..."
   },
   "tour": {
     "blocklyWorkspace": "ওয়ার্কস্পেস হল আপনার কোড তৈরি করার জায়গা।",
@@ -265,16 +243,12 @@
     "easyModeChanged": "সহজ মোডকে {{status}} এ পরিণত করুন",
     "easyModeDescription": "AI এর প্রতিক্রিয়া আরও সহজ হবে।",
     "start": "টিউটোরিয়াল শুরু করুন",
-    "startTour": "আপনি কি করতে পারেন দেখুন.",
     "startTutorial": "টিউটোরিয়াল নির্বাচন করা হয়েছে",
     "title": "টিউটোরিয়াল বাছাই করুন",
-    "tour": "ট্যুর শুরু করুন",
     "otherLanguage": "অন্য ভাষা দ্বারা টিউটোরিয়াল",
-    "otherLanguageDescription": "এই টিউটোরিয়াল প্রদান করার জন্য অনুবাদ করা হচ্ছে, ভুল হতে পারে.",
     "responseMode": "প্রতিক্রিয়া মোড",
     "responseModeChanged": "প্রতিক্রিয়া মোড {{mode}} এ পরিবর্তিত হয়েছে৷",
-    "responseModeDescription": "পছন্দের প্রতিক্রিয়া মোডকে অডিও বা পাঠ্যে পরিবর্তন করুন",
-    "yourLanguage": "আপনার ভাষার জন্য টিউটোরিয়াল"
+    "responseModeDescription": "পছন্দের প্রতিক্রিয়া মোডকে অডিও বা পাঠ্যে পরিবর্তন করুন"
   },
   "vm": {
     "outOfMemory": "মেশিন মেমরি সীমা পৌঁছেছে",
@@ -291,8 +265,7 @@
     "open": "খোলা",
     "save": "সংরক্ষণ করুন",
     "text": "পাঠ্য",
-    "upload": "আপলোড করুন",
-    "websocketNotConnected": "ওয়েবসকেট সংযুক্ত নয়"
+    "upload": "আপলোড করুন"
   },
   "toast": {
     "createdTutorial": "টিউটোরিয়াল তৈরি করা হয়েছে",
@@ -311,7 +284,6 @@
     "updatedRole": "ভূমিকা আপডেট করা হয়েছে",
     "updatedTutorial": "আপডেট করা টিউটোরিয়াল",
     "updatedUser": "ব্যবহারকারীর বিস্তারিত আপডেট করা হয়েছে",
-    "uploadedTutorial": "টিউটোরিয়াল আপলোড করা হয়েছে",
     "anErrorOccurred": "একটি ত্রুটি ঘটেছে",
     "configUpdated": "কনফিগ আপডেট করা হয়েছে",
     "copiedToClipboard": "কপি করা !",
