--- a/apps/frontend/src/i18n/fa.json
+++ b/apps/frontend/src/i18n/fa.json
@@ -52,7 +52,6 @@
     "deleteSession": "حذف کنید",
     "downloadAll": "دانلود تمامی جلسات",
     "downloading": "در حال دانلود",
-    "edit": "ویرایش کنید",
     "email": "ایمیل",
     "example": "کد نمونه",
     "generateContent": "از محتوای موجود محتوای جدید تولید کنید",
@@ -110,8 +109,7 @@
     "writeMetadata": "ابرداده خود را اینجا بنویسید"
   },
   "dialogue": {
-    "Introduction": "سلام! \nروی دکمه پاسخ سریع از نوع سوالات خود کلیک کنید تا انتخاب کنید چه کاری انجام دهید!",
-    "NewSessionWithData": "شروع جلسه جدید با داده های ذخیره شده"
+    "Introduction": "سلام! \nروی دکمه پاسخ سریع از نوع سوالات خود کلیک کنید تا انتخاب کنید چه کاری انجام دهید!"
   },
   "editor": {
     "dialogueTab": "چت کنید",
@@ -123,8 +121,7 @@
   },
   "execSwitch": {
     "Running": "در حال دویدن",
-    "Stopped": "متوقف شد",
-    "label": "کد را اجرا کنید"
+    "Stopped": "متوقف شد"
   },
   "extension": {
     "minecraft-core": {
@@ -139,9 +136,7 @@
     "text": "متن",
     "websocketNotConnected": "وب سوکت متصل نیست"
   },
-  "logbuffer": {
-    "tooManyLogs": "پیام ها خیلی زیاد است. \nلاگ های قدیمی حذف شدند"
-  },
+  "logbuffer": {},
   "login": {
     "login": "وارد شوید",
     "loginFailed": "ورود ناموفق بود",
@@ -173,11 +168,8 @@
     "passwordDescription": "رمز عبور خود را تایپ کنید"
   },
   "navbar": {
-    "connected": "متصل است",
     "execSwitch": "کد را اجرا کنید",
-    "home": "صفحه اصلی",
     "joinCode": "کد عضویت",
-    "leave": "ترک",
     "noTutorial": "هیچ آموزشی انتخاب نشده است",
     "reconnecting": "قطع شده است. \nتلاش برای اتصال مجدد",
     "reload": "بارگذاری مجدد",
@@ -186,11 +178,7 @@
   },
   "off": "خاموش",
   "on": "روشن",
-  "quickReply": {
-    "BeginTutorial": "آموزش را شروع کنید",
-    "HowToUse": "چگونه از این استفاده کنیم؟",
-    "WhatINeed": "چه کاری باید انجام دهم؟"
-  },
+  "quickReply": {},
   "session": {
     "about": "درباره این برنامه",
     "aboutText": "این نرم افزار یک نرم افزار خود میزبان است که آموزش هایی را با استفاده از LLM (AI) ارائه می دهد.  \nاین برنامه به مدیر سایت اجازه می دهد تا داده ها را در مورد استفاده کاربر و اظهارات ارائه شده به شکل غیرقابل شناسایی جمع آوری کند و داده های جمع آوری شده برای یادگیری عملکرد چت در برنامه و بهبود رفتار هوش مصنوعی استفاده می شود.  \nبرای اطلاعات بیشتر در مورد مدیریت داده های ارائه شده توسط برنامه، لطفا با مدیر وب سایت تماس بگیرید. \nاز آنجایی که برنامه به صورت متن باز منتشر می شود و ممکن است کد منبع تغییر کرده باشد، توصیه می شود در صورت ناشناخته بودن مدیر وب سایت از برنامه استفاده نکنید.  \nداده های مربوط به اطلاعات جلسات ایجاد شده ممکن است حذف شود.",
@@ -203,13 +191,8 @@
     "deleteSession": "این جلسه را حذف کنید",
     "findSavedSession": "از داده های ذخیره شده استفاده کنید",
     "hello": "سلام",
-    "joinsession": "با کد بپیوندید",
-    "noSavedSession": "هیچ جلسه ذخیره شده ای یافت نشد",
-    "or": "یا",
     "savedSession": "جلسه ذخیره شده",
-    "serverDownMsg": "اتصال سرور امکان پذیر نیست. \nاینترنت خود را بررسی کنید یا از مدیر سیستم بپرسید.",
     "serverOffline": "سرور آفلاین است - برنامه در دسترس نیست",
-    "serverOnline": "آنلاین",
     "sessionNotFoundMsg": "جلسه پیدا نشد \nکد دیگری را تایپ کنید یا یک جلسه جدید برای شروع ایجاد کنید.",
     "typecodeMsg": "کد خود را تایپ کنید یا اتاق جدیدی برای شروع ایجاد کنید.",
     "welcome": "آموزش کدنویسی با هوش مصنوعی",
@@ -230,20 +213,15 @@
   "textbubble": {
     "ai": "هوش مصنوعی",
     "ask": "هر چیزی بپرس...",
-    "block": "مسدود کردن",
-    "blocksuggestions": "بلوک پیشنهادی",
-    "copiedToClipboard": "کپی شده!",
     "errorLog": "گزارش خطا",
     "findBlock": "بلوک را پیدا کنید",
-    "findBlockFromMenu": "از منو پیدا کنید",
     "log": "ورود به سیستم",
     "replying": "در حال پاسخ دادن...",
     "server": "سرور",
     "showingLatest": "نمایش آخرین {{count}} پیام",
     "you": "شما",
     "audioMode": "حالت صوتی",
-    "transcribing": "رونویسی...",
-    "transcriptionFailed": "رونویسی در دسترس نیست"
+    "transcribing": "رونویسی..."
   },
   "tour": {
     "blocklyWorkspace": "Workspace مکانی برای ساخت کد شماست.",
@@ -265,16 +243,12 @@
     "easyModeChanged": "حالت Easy را به {{وضعیت}} تبدیل کنید",
     "easyModeDescription": "پاسخ هوش مصنوعی آسان تر خواهد بود.",
     "start": "شروع آموزش",
-    "startTour": "ببین چیکار میتونی بکنی",
     "startTutorial": "آموزش انتخاب شده است",
     "title": "انتخاب آموزش",
-    "tour": "شروع تور",
     "otherLanguage": "آموزش به زبان دیگر",
-    "otherLanguageDescription": "از آنجایی که این آموزش ها برای ارائه ترجمه می شوند، ممکن است نادرست باشند.",
     "responseMode": "حالت پاسخگویی",
     "responseModeChanged": "حالت پاسخ به {{حالت}} تغییر کرده است.",
-    "responseModeDescription": "حالت پاسخ ترجیحی را به صدا یا متن تغییر دهید",
-    "yourLanguage": "آموزش زبان شما"
+    "responseModeDescription": "حالت پاسخ ترجیحی را به صدا یا متن تغییر دهید"
   },
   "vm": {
     "outOfMemory": "دستگاه به محدودیت حافظه رسیده است",
@@ -291,8 +265,7 @@
     "open": "باز کنید",
     "save": "ذخیره کنید",
     "text": "متن",
-    "upload": "آپلود کنید",
-    "websocketNotConnected": "وب سوکت متصل نیست"
+    "upload": "آپلود کنید"
   },
   "toast": {
     "createdTutorial": "آموزش ایجاد شد",
@@ -311,7 +284,6 @@
     "updatedRole": "نقش به روز شد",
     "updatedTutorial": "آموزش به روز شده",
     "updatedUser": "جزئیات کاربر به روز شد",
-    "uploadedTutorial": "آموزش آپلود شد",
     "anErrorOccurred": "خطایی رخ داد",
     "configUpdated": "پیکربندی به روز شد",
     "copiedToClipboard": "کپی شده!",
