--- a/apps/frontend/src/i18n/hi.json
+++ b/apps/frontend/src/i18n/hi.json
@@ -52,7 +52,6 @@
     "deleteSession": "मिटाना",
     "downloadAll": "सभी सत्र डाउनलोड करें",
     "downloading": "डाउनलोड",
-    "edit": "संपादन करना",
     "email": "ईमेल",
     "example": "उदाहरण कोड",
     "generateContent": "मौजूदा सामग्री से नई सामग्री उत्पन्न करें",
@@ -110,8 +109,7 @@
     "writeMetadata": "अपना मेटाडेटा यहां लिखें"
   },
   "dialogue": {
-    "Introduction": "नमस्ते! \nक्या करना है यह चुनने के लिए अपने प्रश्नों में टाइप के त्वरित उत्तर बटन पर क्लिक करें!",
-    "NewSessionWithData": "सहेजे गए डेटा के साथ नया सत्र शुरू करना"
+    "Introduction": "नमस्ते! \nक्या करना है यह चुनने के लिए अपने प्रश्नों में टाइप के त्वरित उत्तर बटन पर क्लिक करें!"
   },
   "editor": {
     "dialogueTab": "बात करना",
@@ -123,8 +121,7 @@
   },
   "execSwitch": {
     "Running": "दौड़ना",
-    "Stopped": "रुक गया",
-    "label": "कोड चलाएँ"
+    "Stopped": "रुक गया"
   },
   "extension": {
     "minecraft-core": {
@@ -139,9 +136,7 @@
     "text": "मूलपाठ",
     "websocketNotConnected": "वेबसॉकेट कनेक्ट नहीं है"
   },
-  "logbuffer": {
-    "tooManyLogs": "बहुत सारे संदेश. \nपुराने लॉग हटा दिए गए."
-  },
+  "logbuffer": {},
   "login": {
     "login": "लॉग इन करें",
     "loginFailed": "लॉगिन विफल",
@@ -173,11 +168,8 @@
     "passwordDescription": "अपना पासवर्ड टाइप करें"
   },
   "navbar": {
-    "connected": "जुड़े हुए",
     "execSwitch": "कोड चलाएँ",
-    "home": "घर",
     "joinCode": "कोड से जुड़ें",
-    "leave": "छुट्टी",
     "noTutorial": "कोई ट्यूटोरियल नहीं चुना गया है",
     "reconnecting": "विच्छेदित. \nफिर से कनेक्ट करने का प्रयास।",
     "reload": "पुनः लोड करें",
@@ -186,11 +178,7 @@
   },
   "off": "बंद",
   "on": "पर",
-  "quickReply": {
-    "BeginTutorial": "ट्यूटोरियल प्रारंभ करें",
-    "HowToUse": "इसका उपयोग कैसे करें?",
-    "WhatINeed": "मुझे क्या करना होगा?"
-  },
+  "quickReply": {},
   "session": {
     "about": "इस ऐप के बारे में",
     "aboutText": "यह एप्लिकेशन स्व-होस्टेड सॉफ़्टवेयर है जो एलएलएम (एआई) का उपयोग करके ट्यूटोरियल प्रदान करता है।  \nएप्लिकेशन साइट प्रशासक को उपयोगकर्ता के उपयोग और गैर-व्यक्तिगत पहचान योग्य रूप में दिए गए बयानों पर डेटा एकत्र करने की अनुमति देता है, और एकत्र किए गए डेटा का उपयोग ऐप में चैट फ़ंक्शन को सीखने और एआई के व्यवहार को बेहतर बनाने के लिए किया जाता है।  \nऐप द्वारा प्रदान किए गए डेटा के प्रबंधन के बारे में अधिक जानकारी के लिए, कृपया वेबसाइट व्यवस्थापक से संपर्क करें। \nचूंकि एप्लिकेशन को खुले स्रोत के रूप में प्रकाशित किया गया है और स्रोत कोड को संशोधित किया जा सकता है, इसलिए यह अनुशंसा की जाती है कि यदि वेबसाइट प्रशासक अज्ञात है तो एप्लिकेशन का उपयोग न करें।  \nबनाए गए सत्रों के बारे में जानकारी का डेटा हटाया जा सकता है।",
@@ -203,13 +191,8 @@
     "deleteSession": "इस सत्र को हटाएँ",
     "findSavedSession": "सहेजे गए डेटा का उपयोग करें",
     "hello": "नमस्ते",
-    "joinsession": "कोड के साथ जुड़ें",
-    "noSavedSession": "कोई सहेजा गया सत्र नहीं मिला",
-    "or": "या",
     "savedSession": "सहेजा गया सत्र",
-    "serverDownMsg": "सर्वर कनेक्ट नहीं हो सका. \nअपना इंटरनेट जाँचें या सिस्टम प्रशासक से पूछें।",
     "serverOffline": "सर्वर ऑफ़लाइन है - ऐप अनुपलब्ध है",
-    "serverOnline": "ऑनलाइन",
     "sessionNotFoundMsg": "सत्र नहीं मिला. \nप्रारंभ करने के लिए कोई अन्य कोड टाइप करें या एक नया सत्र बनाएं।",
     "typecodeMsg": "अपना कोड टाइप करें, या शुरू करने के लिए नया कमरा बनाएं।",
     "welcome": "एआई के साथ कोडिंग का अध्ययन करें",
@@ -230,20 +213,15 @@
   "textbubble": {
     "ai": "ऐ",
     "ask": "कुछ भी पूछें...",
-    "block": "अवरोध पैदा करना",
-    "blocksuggestions": "सुझाया गया ब्लॉक",
-    "copiedToClipboard": "नकल की गई!",
     "errorLog": "त्रुटि लॉग",
     "findBlock": "ब्लॉक खोजें",
-    "findBlockFromMenu": "मेनू से खोजें",
     "log": "लकड़ी का लट्ठा",
     "replying": "उत्तर दे रहा हूँ...",
     "server": "सर्वर",
     "showingLatest": "नवीनतम {{गिनती}} संदेश दिखाए जा रहे हैं",
     "you": "आप",
     "audioMode": "ऑडियो मोड",
-    "transcribing": "प्रतिलेखन...",
-    "transcriptionFailed": "प्रतिलेखन अनुपलब्ध है"
+    "transcribing": "प्रतिलेखन..."
   },
   "tour": {
     "blocklyWorkspace": "कार्यक्षेत्र आपका कोड बनाने का स्थान है।",
@@ -265,16 +243,12 @@
     "easyModeChanged": "आसान मोड को {{स्थिति}} में बदलें",
     "easyModeDescription": "AI का रिस्पॉन्स और आसान हो जाएगा.",
     "start": "ट्यूटोरियल प्रारंभ करें",
-    "startTour": "देखो तुम क्या कर सकते हो.",
     "startTutorial": "ट्यूटोरियल का चयन कर लिया गया है",
     "title": "ट्यूटोरियल चुनें",
-    "tour": "दौरा शुरू करो",
     "otherLanguage": "अन्य भाषा द्वारा ट्यूटोरियल",
-    "otherLanguageDescription": "चूंकि ये ट्यूटोरियल उपलब्ध कराने के लिए अनुवादित किए जा रहे हैं, इसलिए ये ग़लत हो सकते हैं।",
     "responseMode": "प्रतिक्रिया मोड",
     "responseModeChanged": "प्रतिक्रिया मोड {{मोड}} में बदल गया है।",
-    "responseModeDescription": "पसंदीदा प्रतिक्रिया मोड को ऑडियो या टेक्स्ट में बदलें",
-    "yourLanguage": "आपकी भाषा के लिए ट्यूटोरियल"
+    "responseModeDescription": "पसंदीदा प्रतिक्रिया मोड को ऑडियो या टेक्स्ट में बदलें"
   },
   "vm": {
     "outOfMemory": "मशीन मेमोरी सीमा तक पहुंच गई",
@@ -291,8 +265,7 @@
     "open": "खुला",
     "save": "बचाना",
     "text": "मूलपाठ",
-    "upload": "अपलोड करें",
-    "websocketNotConnected": "वेबसॉकेट कनेक्ट नहीं है"
+    "upload": "अपलोड करें"
   },
   "toast": {
     "createdTutorial": "ट्यूटोरियल बनाया गया",
@@ -311,7 +284,6 @@
     "updatedRole": "भूमिका अद्यतन की गई",
     "updatedTutorial": "अद्यतन ट्यूटोरियल",
     "updatedUser": "उपयोगकर्ता विवरण अपडेट किया गया",
-    "uploadedTutorial": "ट्यूटोरियल अपलोड किया गया",
     "anErrorOccurred": "एक त्रुटि पाई गई",
     "configUpdated": "कॉन्फ़िग अद्यतन किया गया",
     "copiedToClipboard": "नकल की गई!",
