--- a/apps/frontend/src/i18n/ru.json
+++ b/apps/frontend/src/i18n/ru.json
@@ -52,7 +52,6 @@
     "deleteSession": "Удалить",
     "downloadAll": "Скачать все сеансы",
     "downloading": "Загрузка",
-    "edit": "Редактировать",
     "email": "Электронная почта",
     "example": "Пример кода",
     "generateContent": "Генерируйте новый контент из существующего контента",
@@ -110,8 +109,7 @@
     "writeMetadata": "Напишите здесь свои метаданные"
   },
   "dialogue": {
-    "Introduction": "Привет! \nнажмите кнопку быстрого ответа и введите свои вопросы, чтобы выбрать, что делать!",
-    "NewSessionWithData": "Запуск нового сеанса с сохраненными данными"
+    "Introduction": "Привет! \nнажмите кнопку быстрого ответа и введите свои вопросы, чтобы выбрать, что делать!"
   },
   "editor": {
     "dialogueTab": "Чат",
@@ -123,8 +121,7 @@
   },
   "execSwitch": {
     "Running": "Бег",
-    "Stopped": "Остановлено",
-    "label": "Запустить код"
+    "Stopped": "Остановлено"
   },
   "extension": {
     "minecraft-core": {
@@ -139,9 +136,7 @@
     "text": "Текст",
     "websocketNotConnected": "Вебсокет не подключен"
   },
-  "logbuffer": {
-    "tooManyLogs": "Слишком много сообщений. \nстарые логи удалены."
-  },
+  "logbuffer": {},
   "login": {
     "login": "Авторизоваться",
     "loginFailed": "Ошибка входа",
@@ -173,11 +168,8 @@
     "passwordDescription": "Введите свой пароль"
   },
   "navbar": {
-    "connected": "подключен",
     "execSwitch": "Запустить код",
-    "home": "Дом",
     "joinCode": "Код присоединения",
-    "leave": "оставлять",
     "noTutorial": "Учебник не выбран",
     "reconnecting": "отключен. \nпытаюсь восстановить соединение.",
     "reload": "Перезагрузить",
@@ -186,11 +178,7 @@
   },
   "off": "Выключенный",
   "on": "На",
-  "quickReply": {
-    "BeginTutorial": "Начать обучение",
-    "HowToUse": "Как это использовать?",
-    "WhatINeed": "Что мне нужно сделать?"
-  },
+  "quickReply": {},
   "session": {
     "about": "Об этом приложении",
     "aboutText": "Это приложение представляет собой автономное программное обеспечение, которое предоставляет учебные пособия с использованием LLM (AI).  \nПриложение позволяет администратору сайта собирать данные об использовании пользователей и заявлениях, сделанных в форме, не позволяющей идентифицировать личность, а собранные данные используются для изучения функции чата в приложении и улучшения поведения ИИ.  \nДля получения дополнительной информации об обработке данных, предоставляемых приложением, обратитесь к администратору сайта. \nПоскольку приложение опубликовано с открытым исходным кодом и исходный код мог быть изменен, рекомендуется не использовать приложение, если администратор сайта неизвестен.  \nДанные о созданных сессиях могут быть удалены.",
@@ -203,13 +191,8 @@
     "deleteSession": "Удалить этот сеанс",
     "findSavedSession": "Использовать сохраненные данные",
     "hello": "Привет",
-    "joinsession": "присоединиться с кодом",
-    "noSavedSession": "Сохраненная сессия не найдена",
-    "or": "или",
     "savedSession": "Сохраненная сессия",
-    "serverDownMsg": "Невозможно подключиться к серверу. \nПроверьте свой Интернет или спросите системного администратора.",
     "serverOffline": "Сервер не в сети - приложение недоступно",
-    "serverOnline": "Онлайн",
     "sessionNotFoundMsg": "Сессия не найдена. \nВведите другой код или создайте новый сеанс, чтобы начать.",
     "typecodeMsg": "Введите свой код или создайте новую комнату, чтобы начать.",
     "welcome": "Изучите программирование с помощью ИИ",
@@ -230,20 +213,15 @@
   "textbubble": {
     "ai": "ИИ",
     "ask": "Спроси что угодно...",
-    "block": "Блокировать",
-    "blocksuggestions": "Предлагаемый блок",
-    "copiedToClipboard": "Скопировано!",
     "errorLog": "Журнал ошибок",
     "findBlock": "Найти блок",
-    "findBlockFromMenu": "Найти из меню",
     "log": "Бревно",
     "replying": "Отвечаю...",
     "server": "Сервер",
     "showingLatest": "Показаны последние сообщения: {{count}}.",
     "you": "Ты",
     "audioMode": "Аудио режим",
-    "transcribing": "расшифровка...",
-    "transcriptionFailed": "Транскрипция недоступна"
+    "transcribing": "расшифровка..."
   },
   "tour": {
     "blocklyWorkspace": "Рабочая область — это место для написания вашего кода.",
@@ -265,16 +243,12 @@
     "easyModeChanged": "Переключите простой режим на {{status}}.",
     "easyModeDescription": "Реакция ИИ будет проще.",
     "start": "Начать обучение",
-    "startTour": "Посмотри, что ты можешь сделать.",
     "startTutorial": "Учебное пособие выбрано",
     "title": "Выбрать учебник",
-    "tour": "Начать тур",
     "otherLanguage": "Учебник на другом языке",
-    "otherLanguageDescription": "Поскольку эти учебные пособия переводятся для предоставления, они могут быть неточными.",
     "responseMode": "Режим ответа",
     "responseModeChanged": "Режим ответа изменился на {{mode}}.",
-    "responseModeDescription": "Переключить предпочтительный режим ответа на аудио или текст",
-    "yourLanguage": "Учебник для вашего языка"
+    "responseModeDescription": "Переключить предпочтительный режим ответа на аудио или текст"
   },
   "vm": {
     "outOfMemory": "Машина достигла предела памяти",
@@ -291,8 +265,7 @@
     "open": "Открыть",
     "save": "Сохранять",
     "text": "Текст",
-    "upload": "Загрузить",
-    "websocketNotConnected": "Вебсокет не подключен"
+    "upload": "Загрузить"
   },
   "toast": {
     "createdTutorial": "Учебник создан",
@@ -311,7 +284,6 @@
     "updatedRole": "Роль обновлена",
     "updatedTutorial": "Обновленное руководство",
     "updatedUser": "Сведения о пользователе обновлены.",
-    "uploadedTutorial": "Учебное пособие загружено.",
     "anErrorOccurred": "Произошла ошибка",
     "configUpdated": "Конфигурация обновлена",
     "copiedToClipboard": "Скопировано!",
