--- a/apps/frontend/src/i18n/ta.json
+++ b/apps/frontend/src/i18n/ta.json
@@ -52,7 +52,6 @@
     "deleteSession": "நீக்கு",
     "downloadAll": "அனைத்து அமர்வுகளையும் பதிவிறக்கவும்",
     "downloading": "பதிவிறக்குகிறது",
-    "edit": "திருத்தவும்",
     "email": "மின்னஞ்சல்",
     "example": "எடுத்துக்காட்டு குறியீடு",
     "generateContent": "ஏற்கனவே உள்ள உள்ளடக்கத்திலிருந்து புதிய உள்ளடக்கத்தை உருவாக்கவும்",
@@ -110,8 +109,7 @@
     "writeMetadata": "உங்கள் மெட்டாடேட்டாவை இங்கே எழுதுங்கள்"
   },
   "dialogue": {
-    "Introduction": "ஹாய்! \nஎன்ன செய்ய வேண்டும் என்பதைத் தேர்வுசெய்ய உங்கள் கேள்விகளில் உள்ள விரைவு பதில் பொத்தானைக் கிளிக் செய்யவும்!",
-    "NewSessionWithData": "சேமித்த தரவுகளுடன் புதிய அமர்வைத் தொடங்குதல்"
+    "Introduction": "ஹாய்! \nஎன்ன செய்ய வேண்டும் என்பதைத் தேர்வுசெய்ய உங்கள் கேள்விகளில் உள்ள விரைவு பதில் பொத்தானைக் கிளிக் செய்யவும்!"
   },
   "editor": {
     "dialogueTab": "அரட்டை",
@@ -123,8 +121,7 @@
   },
   "execSwitch": {
     "Running": "ஓடுகிறது",
-    "Stopped": "நிறுத்தப்பட்டது",
-    "label": "குறியீட்டை இயக்கவும்"
+    "Stopped": "நிறுத்தப்பட்டது"
   },
   "extension": {
     "minecraft-core": {
@@ -139,9 +136,7 @@
     "text": "உரை",
     "websocketNotConnected": "Websocket இணைக்கப்படவில்லை"
   },
-  "logbuffer": {
-    "tooManyLogs": "பல செய்திகள். \nபழைய பதிவுகள் அகற்றப்பட்டன."
-  },
+  "logbuffer": {},
   "login": {
     "login": "உள்நுழைக",
     "loginFailed": "உள்நுழைவு தோல்வியடைந்தது",
@@ -173,11 +168,8 @@
     "passwordDescription": "உங்கள் கடவுச்சொல்லை உள்ளிடவும்"
   },
   "navbar": {
-    "connected": "இணைக்கப்பட்டுள்ளது",
     "execSwitch": "குறியீட்டை இயக்கவும்",
-    "home": "வீடு",
     "joinCode": "குறியீட்டில் சேரவும்",
-    "leave": "விடு",
     "noTutorial": "எந்த பயிற்சியும் தேர்ந்தெடுக்கப்படவில்லை",
     "reconnecting": "துண்டிக்கப்பட்டது. \nமீண்டும் இணைக்க முயற்சிக்கிறது.",
     "reload": "மீண்டும் ஏற்றவும்",
@@ -186,11 +178,7 @@
   },
   "off": "ஆஃப்",
   "on": "அன்று",
-  "quickReply": {
-    "BeginTutorial": "பயிற்சியைத் தொடங்குங்கள்",
-    "HowToUse": "இதை எப்படி பயன்படுத்துவது?",
-    "WhatINeed": "நான் என்ன செய்ய வேண்டும்?"
-  },
+  "quickReply": {},
   "session": {
     "about": "இந்த பயன்பாட்டைப் பற்றி",
     "aboutText": "இந்த பயன்பாடு LLM (AI) ஐப் பயன்படுத்தி பயிற்சிகளை வழங்கும் சுய-ஹோஸ்ட் மென்பொருளாகும்.  \nபயனரின் பயன்பாடு மற்றும் தனிப்பட்ட முறையில் அடையாளம் காண முடியாத படிவத்தில் வெளியிடப்பட்ட அறிக்கைகள் குறித்த தரவுகளைச் சேகரிக்க தள நிர்வாகியை பயன்பாடு அனுமதிக்கிறது, மேலும் சேகரிக்கப்பட்ட தரவு பயன்பாட்டில் உள்ள அரட்டை செயல்பாட்டை அறியவும் AI இன் நடத்தையை மேம்படுத்தவும் பயன்படுத்தப்படுகிறது.  \nஆப்ஸ் வழங்கும் தரவைக் கையாள்வது பற்றிய கூடுதல் தகவலுக்கு, இணையதள நிர்வாகியைத் தொடர்பு கொள்ளவும். \nஆப்ஸ் ஓப்பன் சோர்ஸாக வெளியிடப்பட்டிருப்பதாலும், மூலக் குறியீடு மாற்றப்பட்டிருக்கலாம் என்பதாலும், இணையதள நிர்வாகி தெரியவில்லை என்றால், பயன்பாட்டைப் பயன்படுத்த வேண்டாம் என பரிந்துரைக்கப்படுகிறது.  \nஉருவாக்கப்பட்ட அமர்வுகள் பற்றிய தகவல்களின் தரவு நீக்கப்படலாம்.",
@@ -203,13 +191,8 @@
     "deleteSession": "இந்த அமர்வை நீக்கு",
     "findSavedSession": "சேமித்த தரவைப் பயன்படுத்தவும்",
     "hello": "வணக்கம்",
-    "joinsession": "குறியீட்டுடன் சேரவும்",
-    "noSavedSession": "சேமிக்கப்பட்ட அமர்வு எதுவும் இல்லை",
-    "or": "அல்லது",
     "savedSession": "சேமித்த அமர்வு",
-    "serverDownMsg": "சர்வரை இணைக்க முடியவில்லை. \nஉங்கள் இணையத்தைச் சரிபார்க்கவும் அல்லது கணினி நிர்வாகியிடம் கேட்கவும்.",
     "serverOffline": "சேவையகம் ஆஃப்லைனில் உள்ளது - பயன்பாடு கிடைக்கவில்லை",
-    "serverOnline": "ஆன்லைன்",
     "sessionNotFoundMsg": "அமர்வு கிடைக்கவில்லை. \nதொடங்குவதற்கு மற்றொரு குறியீட்டை உள்ளிடவும் அல்லது புதிய அமர்வை உருவாக்கவும்.",
     "typecodeMsg": "உங்கள் குறியீட்டை உள்ளிடவும் அல்லது தொடங்குவதற்கு புதிய அறையை உருவாக்கவும்.",
     "welcome": "AI உடன் குறியீட்டு முறையைப் படிக்கவும்",
@@ -230,20 +213,15 @@
   "textbubble": {
     "ai": "AI",
     "ask": "எதையும் கேள்...",
-    "block": "தடு",
-    "blocksuggestions": "பரிந்துரைக்கப்பட்ட தொகுதி",
-    "copiedToClipboard": "நகலெடுக்கப்பட்டது!",
     "errorLog": "பிழை பதிவு",
     "findBlock": "தொகுதியைக் கண்டுபிடி",
-    "findBlockFromMenu": "மெனுவிலிருந்து கண்டுபிடிக்கவும்",
     "log": "பதிவு",
     "replying": "பதிலளிக்கிறது...",
     "server": "சேவையகம்",
     "showingLatest": "சமீபத்திய {{count}} செய்திகளைக் காட்டுகிறது",
     "you": "நீங்கள்",
     "audioMode": "ஆடியோ பயன்முறை",
-    "transcribing": "படியெடுத்தல்...",
-    "transcriptionFailed": "டிரான்ஸ்கிரிப்ஷன் கிடைக்கவில்லை"
+    "transcribing": "படியெடுத்தல்..."
   },
   "tour": {
     "blocklyWorkspace": "பணியிடம் என்பது உங்கள் குறியீட்டை உருவாக்கும் இடம்.",
@@ -265,16 +243,12 @@
     "easyModeChanged": "எளிதான பயன்முறையை {{status}} க்கு மாற்று",
     "easyModeDescription": "AI இன் பதில் மிகவும் எளிதாக இருக்கும்.",
     "start": "பயிற்சியைத் தொடங்கவும்",
-    "startTour": "உங்களால் என்ன செய்ய முடியும் என்று பாருங்கள்.",
     "startTutorial": "டுடோரியல் தேர்ந்தெடுக்கப்பட்டது",
     "title": "டுடோரியலைத் தேர்ந்தெடுக்கவும்",
-    "tour": "பயணத்தைத் தொடங்கு",
     "otherLanguage": "பிற மொழி மூலம் பயிற்சி",
-    "otherLanguageDescription": "இந்த பயிற்சிகள் வழங்குவதற்காக மொழிபெயர்க்கப்பட்டதால், துல்லியமாக இருக்கலாம்.",
     "responseMode": "பதில் முறை",
     "responseModeChanged": "மறுமொழி முறை {{mode}}க்கு மாற்றப்பட்டுள்ளது.",
-    "responseModeDescription": "விருப்பமான மறுமொழி பயன்முறையை ஆடியோ அல்லது உரையாக மாற்றவும்",
-    "yourLanguage": "உங்கள் மொழிக்கான பயிற்சி"
+    "responseModeDescription": "விருப்பமான மறுமொழி பயன்முறையை ஆடியோ அல்லது உரையாக மாற்றவும்"
   },
   "vm": {
     "outOfMemory": "இயந்திரம் நினைவக வரம்பை அடைந்தது",
@@ -291,8 +265,7 @@
     "open": "திற",
     "save": "சேமிக்கவும்",
     "text": "உரை",
-    "upload": "பதிவேற்றவும்",
-    "websocketNotConnected": "Websocket இணைக்கப்படவில்லை"
+    "upload": "பதிவேற்றவும்"
   },
   "toast": {
     "createdTutorial": "பயிற்சி உருவாக்கப்பட்டது",
@@ -311,7 +284,6 @@
     "updatedRole": "பங்கு புதுப்பிக்கப்பட்டது",
     "updatedTutorial": "மேம்படுத்தப்பட்ட பயிற்சி",
     "updatedUser": "பயனர் விவரம் புதுப்பிக்கப்பட்டது",
-    "uploadedTutorial": "டுடோரியல் பதிவேற்றப்பட்டது",
     "anErrorOccurred": "ஒரு பிழை ஏற்பட்டது",
     "configUpdated": "கட்டமைப்பு புதுப்பிக்கப்பட்டது",
     "copiedToClipboard": "நகலெடுக்கப்பட்டது!",
