--- a/apps/frontend/src/i18n/te.json
+++ b/apps/frontend/src/i18n/te.json
@@ -52,7 +52,6 @@
     "deleteSession": "తొలగించు",
     "downloadAll": "అన్ని సెషన్‌లను డౌన్‌లోడ్ చేయండి",
     "downloading": "డౌన్‌లోడ్ చేస్తోంది",
-    "edit": "సవరించు",
     "email": "ఇమెయిల్",
     "example": "ఉదాహరణ కోడ్",
     "generateContent": "ఇప్పటికే ఉన్న కంటెంట్ నుండి కొత్త కంటెంట్‌ను రూపొందించండి",
@@ -110,8 +109,7 @@
     "writeMetadata": "మీ మెటాడేటాను ఇక్కడ వ్రాయండి"
   },
   "dialogue": {
-    "Introduction": "హాయ్! \nఏమి చేయాలో ఎంచుకోవడానికి మీ ప్రశ్నలలో టైప్ యొక్క శీఘ్ర ప్రత్యుత్తరం బటన్‌ను క్లిక్ చేయండి!",
-    "NewSessionWithData": "సేవ్ చేసిన డేటాతో కొత్త సెషన్‌ను ప్రారంభించడం"
+    "Introduction": "హాయ్! \nఏమి చేయాలో ఎంచుకోవడానికి మీ ప్రశ్నలలో టైప్ యొక్క శీఘ్ర ప్రత్యుత్తరం బటన్‌ను క్లిక్ చేయండి!"
   },
   "editor": {
     "dialogueTab": "చాట్ చేయండి",
@@ -123,8 +121,7 @@
   },
   "execSwitch": {
     "Running": "నడుస్తోంది",
-    "Stopped": "ఆగిపోయింది",
-    "label": "కోడ్‌ని అమలు చేయండి"
+    "Stopped": "ఆగిపోయింది"
   },
   "extension": {
     "minecraft-core": {
@@ -139,9 +136,7 @@
     "text": "వచనం",
     "websocketNotConnected": "వెబ్‌సాకెట్ కనెక్ట్ చేయబడలేదు"
   },
-  "logbuffer": {
-    "tooManyLogs": "చాలా సందేశాలు. \nపాత లాగ్‌లు తొలగించబడ్డాయి."
-  },
+  "logbuffer": {},
   "login": {
     "login": "లాగిన్ చేయండి",
     "loginFailed": "లాగిన్ విఫలమైంది",
@@ -173,11 +168,8 @@
     "passwordDescription": "మీ పాస్‌వర్డ్‌ని టైప్ చేయండి"
   },
   "navbar": {
-    "connected": "కనెక్ట్ చేయబడింది",
     "execSwitch": "కోడ్‌ని అమలు చేయండి",
-    "home": "హోమ్",
     "joinCode": "కోడ్‌లో చేరండి",
-    "leave": "వదిలివేయండి",
     "noTutorial": "ఏ ట్యుటోరియల్ ఎంచుకోబడలేదు",
     "reconnecting": "డిస్‌కనెక్ట్ చేయబడింది. \nమళ్లీ కనెక్ట్ చేయడానికి ప్రయత్నిస్తోంది.",
     "reload": "మళ్లీ లోడ్ చేయండి",
@@ -186,11 +178,7 @@
   },
   "off": "ఆఫ్",
   "on": "ఆన్",
-  "quickReply": {
-    "BeginTutorial": "ట్యుటోరియల్ ప్రారంభించండి",
-    "HowToUse": "దీన్ని ఎలా ఉపయోగించాలి?",
-    "WhatINeed": "నేను ఏమి చేయాలి?"
-  },
+  "quickReply": {},
   "session": {
     "about": "ఈ యాప్ గురించి",
     "aboutText": "ఈ అప్లికేషన్ LLM (AI)ని ఉపయోగించి ట్యుటోరియల్‌లను అందించే స్వీయ-హోస్ట్ సాఫ్ట్‌వేర్.  \nయూజర్ వినియోగం మరియు వ్యక్తిగతంగా గుర్తించలేని రూపంలో చేసిన స్టేట్‌మెంట్‌లపై డేటాను సేకరించడానికి సైట్ అడ్మినిస్ట్రేటర్‌ని అప్లికేషన్ అనుమతిస్తుంది మరియు సేకరించిన డేటా యాప్‌లోని చాట్ ఫంక్షన్‌ను తెలుసుకోవడానికి మరియు AI ప్రవర్తనను మెరుగుపరచడానికి ఉపయోగించబడుతుంది.  \nయాప్ అందించిన డేటా నిర్వహణపై మరింత సమాచారం కోసం, దయచేసి వెబ్‌సైట్ నిర్వాహకులను సంప్రదించండి. \nఅప్లికేషన్ ఓపెన్ సోర్స్‌గా ప్రచురించబడింది మరియు సోర్స్ కోడ్ సవరించబడి ఉండవచ్చు, వెబ్‌సైట్ అడ్మినిస్ట్రేటర్ తెలియకపోతే అప్లికేషన్‌ను ఉపయోగించకూడదని సిఫార్సు చేయబడింది.  \nసృష్టించబడిన సెషన్‌ల గురించిన సమాచారంపై డేటా తొలగించబడవచ్చు.",
@@ -203,13 +191,8 @@
     "deleteSession": "ఈ సెషన్‌ను తొలగించండి",
     "findSavedSession": "సేవ్ చేసిన డేటాను ఉపయోగించండి",
     "hello": "నమస్కారం",
-    "joinsession": "కోడ్‌తో చేరండి",
-    "noSavedSession": "సేవ్ చేయబడిన సెషన్ ఏదీ కనుగొనబడలేదు",
-    "or": "లేదా",
     "savedSession": "సేవ్ చేసిన సెషన్",
-    "serverDownMsg": "సర్వర్‌ని కనెక్ట్ చేయడం సాధ్యపడదు. \nమీ ఇంటర్నెట్‌ని తనిఖీ చేయండి లేదా సిస్టమ్ అడ్మినిస్ట్రేటర్‌ని అడగండి.",
     "serverOffline": "సర్వర్ ఆఫ్‌లైన్‌లో ఉంది - యాప్ అందుబాటులో లేదు",
-    "serverOnline": "ఆన్‌లైన్",
     "sessionNotFoundMsg": "సెషన్ కనుగొనబడలేదు. \nప్రారంభించడానికి మరొక కోడ్‌ని టైప్ చేయండి లేదా కొత్త సెషన్‌ను సృష్టించండి.",
     "typecodeMsg": "మీ కోడ్‌ని టైప్ చేయండి లేదా ప్రారంభించడానికి కొత్త గదిని సృష్టించండి.",
     "welcome": "AIతో కోడింగ్‌ని అధ్యయనం చేయండి",
@@ -230,20 +213,15 @@
   "textbubble": {
     "ai": "AI",
     "ask": "ఏదైనా అడగండి...",
-    "block": "నిరోధించు",
-    "blocksuggestions": "సూచించబడిన బ్లాక్",
-    "copiedToClipboard": "కాపీ చేయబడింది!",
     "errorLog": "ఎర్రర్ లాగ్",
     "findBlock": "బ్లాక్‌ని కనుగొనండి",
-    "findBlockFromMenu": "మెను నుండి కనుగొనండి",
     "log": "లాగ్",
     "replying": "ప్రత్యుత్తరం ఇస్తోంది...",
     "server": "సర్వర్",
     "showingLatest": "తాజా {{count}} సందేశాలను చూపుతోంది",
     "you": "మీరు",
     "audioMode": "ఆడియో మోడ్",
-    "transcribing": "లిప్యంతరీకరణ...",
-    "transcriptionFailed": "లిప్యంతరీకరణ అందుబాటులో లేదు"
+    "transcribing": "లిప్యంతరీకరణ..."
   },
   "tour": {
     "blocklyWorkspace": "వర్క్‌స్పేస్ అనేది మీ కోడ్‌ని రూపొందించే ప్రదేశం.",
@@ -265,16 +243,12 @@
     "easyModeChanged": "ఈజీ మోడ్‌ను {{ స్థితి}}కి మార్చండి",
     "easyModeDescription": "AI యొక్క ప్రతిస్పందన మరింత సులభంగా ఉంటుంది.",
     "start": "ట్యుటోరియల్ ప్రారంభించండి",
-    "startTour": "మీరు ఏమి చేయగలరో చూడండి.",
     "startTutorial": "ట్యుటోరియల్ ఎంపిక చేయబడింది",
     "title": "ట్యుటోరియల్ ఎంచుకోండి",
-    "tour": "పర్యటన ప్రారంభించండి",
     "otherLanguage": "ఇతర భాష ద్వారా ట్యుటోరియల్",
-    "otherLanguageDescription": "అందించడానికి ఈ ట్యుటోరియల్‌లు అనువదించబడుతున్నందున, సరికాకపోవచ్చు.",
     "responseMode": "ప్రతిస్పందన మోడ్",
     "responseModeChanged": "ప్రతిస్పందన మోడ్ {{mode}}కి మార్చబడింది.",
-    "responseModeDescription": "ప్రాధాన్య ప్రతిస్పందన మోడ్‌ని ఆడియో లేదా టెక్స్ట్‌గా మార్చండి",
-    "yourLanguage": "మీ భాష కోసం ట్యుటోరియల్"
+    "responseModeDescription": "ప్రాధాన్య ప్రతిస్పందన మోడ్‌ని ఆడియో లేదా టెక్స్ట్‌గా మార్చండి"
   },
   "vm": {
     "outOfMemory": "మెషిన్ మెమరీ పరిమితిని చేరుకుంది",
@@ -291,8 +265,7 @@
     "open": "తెరవండి",
     "save": "సేవ్ చేయండి",
     "text": "వచనం",
-    "upload": "అప్‌లోడ్ చేయండి",
-    "websocketNotConnected": "వెబ్‌సాకెట్ కనెక్ట్ చేయబడలేదు"
+    "upload": "అప్‌లోడ్ చేయండి"
   },
   "toast": {
     "createdTutorial": "ట్యుటోరియల్ సృష్టించబడింది",
@@ -311,7 +284,6 @@
     "updatedRole": "పాత్ర నవీకరించబడింది",
     "updatedTutorial": "ట్యుటోరియల్ నవీకరించబడింది",
     "updatedUser": "వినియోగదారు వివరాలు నవీకరించబడ్డాయి",
-    "uploadedTutorial": "ట్యుటోరియల్ అప్‌లోడ్ చేయబడింది",
     "anErrorOccurred": "ఒక లోపం సంభవించింది",
     "configUpdated": "కాన్ఫిగర్ నవీకరించబడింది",
     "copiedToClipboard": "కాపీ చేయబడింది!",
