--- a/apps/frontend/src/i18n/fr.json
+++ b/apps/frontend/src/i18n/fr.json
@@ -52,7 +52,6 @@
     "deleteSession": "Supprimer",
     "downloadAll": "Téléchargez toutes les séances",
     "downloading": "Téléchargement",
-    "edit": "Modifier",
     "email": "E-mail",
     "example": "Exemple de code",
     "generateContent": "Générer du nouveau contenu à partir du contenu existant",
@@ -110,8 +109,7 @@
     "writeMetadata": "Écrivez vos métadonnées ici"
   },
   "dialogue": {
-    "Introduction": "Salut! \ncliquez sur le bouton de réponse rapide ou saisissez vos questions pour choisir quoi faire !",
-    "NewSessionWithData": "Démarrer une nouvelle session avec les données enregistrées"
+    "Introduction": "Salut! \ncliquez sur le bouton de réponse rapide ou saisissez vos questions pour choisir quoi faire !"
   },
   "editor": {
     "dialogueTab": "Chat",
@@ -123,8 +121,7 @@
   },
   "execSwitch": {
     "Running": "En cours d'exécution",
-    "Stopped": "Arrêté",
-    "label": "Exécuter le code"
+    "Stopped": "Arrêté"
   },
   "extension": {
     "minecraft-core": {
@@ -139,9 +136,7 @@
     "text": "Texte",
     "websocketNotConnected": "Websocket n'est pas connecté"
   },
-  "logbuffer": {
-    "tooManyLogs": "Trop de messages. \nanciens journaux supprimés."
-  },
+  "logbuffer": {},
   "login": {
     "login": "Se connecter",
     "loginFailed": "La connexion a échoué",
@@ -170,11 +165,8 @@
     "userNameDescription": "Il s'agit de votre nom d'utilisateur pour vous connecter."
   },
   "navbar": {
-    "connected": "connecté",
     "execSwitch": "Exécuter le code",
-    "home": "Maison",
     "joinCode": "Rejoindre le code",
-    "leave": "partir",
     "noTutorial": "Aucun tutoriel n'a sélectionné",
     "reconnecting": "déconnecté. \ntenter de se reconnecter.",
     "reload": "Recharger",
@@ -183,11 +175,7 @@
   },
   "off": "Désactivé",
   "on": "Sur",
-  "quickReply": {
-    "BeginTutorial": "Commencer le tutoriel",
-    "HowToUse": "Comment utiliser cela ?",
-    "WhatINeed": "Que dois-je faire ?"
-  },
+  "quickReply": {},
   "session": {
     "about": "À propos de cette application",
     "aboutText": "Cette application est un logiciel auto-hébergé qui fournit des tutoriels utilisant LLM (AI).  \nL'application permet à l'administrateur du site de collecter des données sur l'utilisation des utilisateurs et les déclarations faites sous une forme non personnellement identifiable, et les données collectées sont utilisées pour apprendre la fonction de chat dans l'application et pour améliorer le comportement de l'IA.  \nPour plus d'informations sur le traitement des données fournies par l'application, veuillez contacter l'administrateur du site Web. \nL'application étant publiée en open source et le code source pouvant avoir été modifié, il est recommandé de ne pas utiliser l'application si l'administrateur du site est inconnu.  \nLes données sur les informations sur les sessions créées peuvent être supprimées.",
@@ -200,13 +188,8 @@
     "deleteSession": "Supprimer cette session",
     "findSavedSession": "Utiliser les données enregistrées",
     "hello": "Bonjour",
-    "joinsession": "rejoindre avec le code",
-    "noSavedSession": "Aucune session enregistrée trouvée",
-    "or": "ou",
     "savedSession": "Session enregistrée",
-    "serverDownMsg": "Impossible de connecter le serveur. \nVérifiez votre connexion Internet ou demandez à l'administrateur système.",
     "serverOffline": "Le serveur est hors ligne - L'application n'est pas disponible",
-    "serverOnline": "En ligne",
     "sessionNotFoundMsg": "Séance introuvable. \nTapez un autre code ou créez une nouvelle session pour démarrer.",
     "typecodeMsg": "Tapez votre code ou créez une nouvelle salle pour commencer.",
     "welcome": "Étudier le codage avec l'IA",
@@ -227,20 +210,15 @@
   "textbubble": {
     "ai": "IA",
     "ask": "Demandez n'importe quoi...",
-    "block": "Bloc",
-    "blocksuggestions": "Bloc suggéré",
-    "copiedToClipboard": "Copié!",
     "errorLog": "Journal des erreurs",
     "findBlock": "Rechercher un bloc",
-    "findBlockFromMenu": "Rechercher dans le menu",
     "log": "Enregistrer",
     "replying": "Répondre...",
     "server": "Serveur",
     "showingLatest": "Affichage des {{count}} derniers messages",
     "you": "Toi",
     "audioMode": "Mode audio",
-    "transcribing": "transcrire...",
-    "transcriptionFailed": "La transcription n'est pas disponible"
+    "transcribing": "transcrire..."
   },
   "tour": {
     "blocklyWorkspace": "L'espace de travail est l'endroit où créer votre code.",
@@ -262,16 +240,12 @@
     "easyModeChanged": "Tournez le mode Facile sur {{status}}",
     "easyModeDescription": "La réponse d'IA sera plus facile.",
     "start": "Démarrer le didacticiel",
-    "startTour": "Regardez ce que vous pouvez faire.",
     "startTutorial": "Le tutoriel a sélectionné",
     "title": "Choisir un didacticiel",
-    "tour": "Démarrer la visite",
     "otherLanguage": "Tutoriel dans une autre langue",
-    "otherLanguageDescription": "Comme ces didacticiels sont traduits, ils peuvent être inexacts.",
     "responseMode": "Mode de réponse",
     "responseModeChanged": "Le mode de réponse est passé à {{mode}}.",
-    "responseModeDescription": "Basculez le mode de réponse préféré en audio ou texte",
-    "yourLanguage": "Tutoriel pour votre langue"
+    "responseModeDescription": "Basculez le mode de réponse préféré en audio ou texte"
   },
   "vm": {
     "outOfMemory": "La machine a atteint la limite de mémoire",
@@ -288,8 +262,7 @@
     "open": "Ouvrir",
     "save": "Sauvegarder",
     "text": "Texte",
-    "upload": "Télécharger",
-    "websocketNotConnected": "Websocket n'est pas connecté"
+    "upload": "Télécharger"
   },
   "toast": {
     "createdTutorial": "Tutoriel créé",
@@ -307,7 +280,6 @@
     "updatedPassword": "Mot de passe mis à jour.",
     "updatedRole": "Rôle mis à jour",
     "updatedTutorial": "Tutoriel mis à jour",
-    "updatedUser": "Détails de l'utilisateur mis à jour",
-    "uploadedTutorial": "Tutoriel téléchargé"
+    "updatedUser": "Détails de l'utilisateur mis à jour"
   }
 }
