--- a/apps/frontend/src/i18n/ja.json
+++ b/apps/frontend/src/i18n/ja.json
@@ -5,8 +5,7 @@
   },
   "execSwitch": {
     "Running": "実行中",
-    "Stopped": "停止中",
-    "label": "コードをためす"
+    "Stopped": "停止中"
   },
   "login": {
     "welcome": "続行するにはログインしてください",
@@ -39,11 +38,8 @@
     "passwordDescription": "パスワードを入力してください"
   },
   "navbar": {
-    "connected": "接続されています",
-    "leave": "やめる",
     "saveAndLeave": "保存してやめる",
     "reconnecting": "切断されました。\n再接続しようとしています。",
-    "home": "ホーム",
     "signout": "サインアウト",
     "noTutorial": "チュートリアルを選んでいません",
     "joinCode": "参加コード",
@@ -55,23 +51,18 @@
     "createSession": "新しいセッションを作る",
     "creating": "作っています...",
     "hello": "こんにちは",
-    "joinsession": "コードで始める",
-    "or": "または",
     "sessionNotFoundMsg": "セッションがありません。\n別のコードを入力するか、新しいセッションを作成して開始してください。",
     "typecodeMsg": "コードを入れるか、新しいセッションを作ってはじめましょう。",
     "welcome": "AIを使ってプログラミングを学ぼう。",
     "debuginfo": "デバッグ情報",
-    "serverDownMsg": "サーバーに接続できません。インターネットを確認するか、管理者にお問い合わせください。",
     "aboutText": "このアプリは、LLM（AI）を利用したチュートリアルを提供するセルフホストソフトウェアです。  このアプリケーションを利用すると、サイトの管理者は個人を特定できない形で、ユーザーの利用状況や、発言のデータを収集することができ、収集されたデータはアプリ内のチャット機能の学習や、AIの挙動改善に利用されます。  アプリで提供されたデータの取扱の詳しい情報については、ウェブサイトの管理者にお問い合わせください。このアプリケーションはオープンソースで公開されており、ソースコードが改変されている可能性もあるため、ウェブサイトの管理者が不明な場合、アプリケーションを利用しないことをお勧めします。  作成したセッションの情報のデータは削除されることがあります。",
     "findSavedSession": "保存したデータをつかう",
-    "noSavedSession": "セーブしたセッションが見つかりませんでした",
     "savedSession": "セーブしたセッション",
     "continueSession": "セッションをつづける",
     "deleteSession": "このセッションを削除する",
     "checkingServer": "サーバーの状態を確認中...",
     "available": "アプリは利用可能です",
     "serverOffline": "サーバーはオフラインです - アプリは利用できません",
-    "serverOnline": "オンライン",
     "installPWA": "PWAとしてインストールする",
     "deleteStorage": "全ての保存内容を削除する",
     "failedCreate": "セッションの作成に失敗しました",
@@ -91,32 +82,23 @@
     "server": "サーバー",
     "ai": "AI",
     "you": "あなた",
-    "block": "ブロック",
     "findBlock": "ブロックを見つける",
-    "findBlockFromMenu": "メニューから探す",
     "replying": "返信中...",
     "ask": "質問してみる...",
     "showingLatest": "最後の{{count}}件のメッセージを表示しています",
     "errorLog": "エラーログ",
-    "copiedToClipboard": "コピーしました！",
-    "blocksuggestions": "提案されたブロック",
     "audioMode": "音声モード",
-    "transcribing": "文字起こし中...",
-    "transcriptionFailed": "文字起こしが利用できません"
+    "transcribing": "文字起こし中..."
   },
   "tutorial": {
     "title": "チュートリアルを選ぶ",
     "description": "学習したいチュートリアルを選びましょう",
     "start": "チュートリアルを始める",
     "startTutorial": "チュートリアルを選びました",
-    "tour": "ツアーを始める",
-    "startTour": "何ができるか見てみましょう。",
     "easyMode": "かんたんモード",
     "easyModeDescription": "AIからのチャットがかんたんになります",
     "easyModeChanged": "かんたんモードを{{status}}にしました",
-    "yourLanguage": "あなたの言語のチュートリアル",
     "otherLanguage": "他の言語のチュートリアル",
-    "otherLanguageDescription": "これらのチュートリアルは、翻訳して提供されるため、正確でない場合があります。",
     "responseMode": "応答モード",
     "responseModeDescription": "希望する応答方法を音声やテキストに変更できます",
     "responseModeChanged": "応答モードを{{mode}}に切り替えました"
@@ -126,9 +108,7 @@
     "updatedScriptSuccess": "新しいコードの実行に成功しました",
     "updatedScriptError": "新しいコード実行中にエラーが発生："
   },
-  "logbuffer": {
-    "tooManyLogs": "メッセージが多すぎます。古いログは削除されました。"
-  },
+  "logbuffer": {},
   "generic": {
     "connected": "接続しました",
     "websocketNotConnected": "Websocketが接続されていません",
@@ -189,7 +169,6 @@
     "deleteSession": "消去",
     "downloadAll": "すべてのセッションをダウンロードする",
     "downloading": "ダウンロード中",
-    "edit": "編集",
     "email": "電子メール",
     "example": "コード例",
     "generateContent": "既存のコンテンツから新しいコンテンツを生成する",
@@ -246,14 +225,9 @@
     "writeContent": "ここにコンテンツを書いてください",
     "writeMetadata": "ここにメタデータを書き込みます"
   },
-  "quickReply": {
-    "HowToUse": "どうやって使うの？",
-    "WhatINeed": "何をしたらいいの？",
-    "BeginTutorial": "チュートリアルを始めたい"
-  },
+  "quickReply": {},
   "dialogue": {
-    "Introduction": "こんにちは！まずは画面下のボタンや、チャット欄から、何をしたいか決めましょう！",
-    "NewSessionWithData": "保存済みのデータから、セッションを開始しました"
+    "Introduction": "こんにちは！まずは画面下のボタンや、チャット欄から、何をしたいか決めましょう！"
   },
   "AppConfig": {
     "AI_Settings": "AI設定",
@@ -291,8 +265,7 @@
     "open": "開ける",
     "save": "保存",
     "text": "文章",
-    "upload": "アップロード",
-    "websocketNotConnected": "WebSocketが接続されていません"
+    "upload": "アップロード"
   },
   "toast": {
     "createdTutorial": "チュートリアルを作成しました",
@@ -311,7 +284,6 @@
     "updatedRole": "役割が更新されました",
     "updatedTutorial": "チュートリアルを更新しました",
     "updatedUser": "ユーザーの詳細が更新されました",
-    "uploadedTutorial": "チュートリアルがアップロードされました",
     "anErrorOccurred": "エラーが発生しました",
     "configUpdated": "構成が更新されました",
     "copiedToClipboard": "コピーしました！",
