--- a/apps/frontend/src/i18n/th.json
+++ b/apps/frontend/src/i18n/th.json
@@ -52,7 +52,6 @@
     "deleteSession": "ลบ",
     "downloadAll": "ดาวน์โหลดเซสชันทั้งหมด",
     "downloading": "กำลังดาวน์โหลด",
-    "edit": "แก้ไข",
     "email": "อีเมล",
     "example": "รหัสตัวอย่าง",
     "generateContent": "สร้างเนื้อหาใหม่จากเนื้อหาที่มีอยู่",
@@ -110,8 +109,7 @@
     "writeMetadata": "เขียนข้อมูลเมตาของคุณที่นี่"
   },
   "dialogue": {
-    "Introduction": "สวัสดี! \nคลิกปุ่มตอบกลับด่วนตามประเภทคำถามของคุณเพื่อเลือกว่าจะทำอย่างไร!",
-    "NewSessionWithData": "กำลังเริ่มเซสชันใหม่ด้วยข้อมูลที่บันทึกไว้"
+    "Introduction": "สวัสดี! \nคลิกปุ่มตอบกลับด่วนตามประเภทคำถามของคุณเพื่อเลือกว่าจะทำอย่างไร!"
   },
   "editor": {
     "dialogueTab": "แชท",
@@ -123,8 +121,7 @@
   },
   "execSwitch": {
     "Running": "วิ่ง",
-    "Stopped": "หยุดแล้ว",
-    "label": "รันโค้ด"
+    "Stopped": "หยุดแล้ว"
   },
   "extension": {
     "minecraft-core": {
@@ -139,9 +136,7 @@
     "text": "ข้อความ",
     "websocketNotConnected": "ไม่ได้เชื่อมต่อ Websocket"
   },
-  "logbuffer": {
-    "tooManyLogs": "มีข้อความมากเกินไป \nบันทึกเก่าถูกลบออก"
-  },
+  "logbuffer": {},
   "login": {
     "login": "เข้าสู่ระบบ",
     "loginFailed": "การเข้าสู่ระบบล้มเหลว",
@@ -173,11 +168,8 @@
     "passwordDescription": "พิมพ์รหัสผ่านของคุณ"
   },
   "navbar": {
-    "connected": "เชื่อมต่อแล้ว",
     "execSwitch": "เรียกใช้โค้ด",
-    "home": "บ้าน",
     "joinCode": "เข้าร่วมรหัส",
-    "leave": "ออกจาก",
     "noTutorial": "ไม่ได้เลือกบทช่วยสอน",
     "reconnecting": "ตัดการเชื่อมต่อ \nกำลังพยายามเชื่อมต่อใหม่",
     "reload": "โหลดซ้ำ",
@@ -186,11 +178,7 @@
   },
   "off": "ปิด",
   "on": "บน",
-  "quickReply": {
-    "BeginTutorial": "เริ่มบทช่วยสอน",
-    "HowToUse": "วิธีใช้สิ่งนี้?",
-    "WhatINeed": "ฉันต้องทำอะไร?"
-  },
+  "quickReply": {},
   "session": {
     "about": "เกี่ยวกับแอพนี้",
     "aboutText": "แอปพลิเคชั่นนี้เป็นซอฟต์แวร์ที่โฮสต์เองซึ่งมีบทช่วยสอนโดยใช้ LLM (AI)  \nแอปพลิเคชันช่วยให้ผู้ดูแลไซต์รวบรวมข้อมูลเกี่ยวกับการใช้งานของผู้ใช้และคำชี้แจงที่ทำในรูปแบบที่ไม่สามารถระบุตัวบุคคลได้ และข้อมูลที่รวบรวมจะถูกนำมาใช้เพื่อเรียนรู้ฟังก์ชันแชทในแอป และเพื่อปรับปรุงพฤติกรรมของ AI  \nสำหรับข้อมูลเพิ่มเติมเกี่ยวกับการจัดการข้อมูลที่จัดทำโดยแอป โปรดติดต่อผู้ดูแลเว็บไซต์ \nเนื่องจากแอปพลิเคชันได้รับการเผยแพร่เป็นโอเพ่นซอร์สและซอร์สโค้ดอาจมีการแก้ไข จึงไม่แนะนำให้ใช้แอปพลิเคชันหากไม่ทราบผู้ดูแลเว็บไซต์  \nข้อมูลเกี่ยวกับเซสชันที่สร้างขึ้นอาจถูกลบ",
@@ -203,13 +191,8 @@
     "deleteSession": "ลบเซสชันนี้",
     "findSavedSession": "ใช้ข้อมูลที่บันทึกไว้",
     "hello": "สวัสดี",
-    "joinsession": "เข้าร่วมด้วยรหัส",
-    "noSavedSession": "ไม่พบเซสชันที่บันทึกไว้",
-    "or": "หรือ",
     "savedSession": "เซสชันที่บันทึกไว้",
-    "serverDownMsg": "ไม่สามารถเชื่อมต่อเซิร์ฟเวอร์ได้ \nตรวจสอบอินเทอร์เน็ตของคุณหรือสอบถามผู้ดูแลระบบ",
     "serverOffline": "เซิร์ฟเวอร์ออฟไลน์อยู่ - แอปไม่พร้อมใช้งาน",
-    "serverOnline": "ออนไลน์",
     "sessionNotFoundMsg": "ไม่พบเซสชัน \nพิมพ์รหัสอื่นหรือสร้างเซสชันใหม่เพื่อเริ่มต้น",
     "typecodeMsg": "พิมพ์รหัสของคุณหรือสร้างห้องใหม่เพื่อเริ่มต้น",
     "welcome": "เรียนการเขียนโค้ดด้วย AI",
@@ -230,20 +213,15 @@
   "textbubble": {
     "ai": "AI",
     "ask": "ถามอะไรก็ได้...",
-    "block": "ปิดกั้น",
-    "blocksuggestions": "บล๊อกที่แนะนำ",
-    "copiedToClipboard": "คัดลอก!",
     "errorLog": "บันทึกข้อผิดพลาด",
     "findBlock": "ค้นหาบล็อก",
-    "findBlockFromMenu": "ค้นหาจากเมนู",
     "log": "บันทึก",
     "replying": "กำลังตอบกลับ...",
     "server": "เซิร์ฟเวอร์",
     "showingLatest": "กำลังแสดงข้อความล่าสุด {{count}} ข้อความ",
     "you": "คุณ",
     "audioMode": "โหมดเสียง",
-    "transcribing": "กำลังถอดเสียง...",
-    "transcriptionFailed": "ไม่สามารถถอดเสียงเป็นคำได้"
+    "transcribing": "กำลังถอดเสียง..."
   },
   "tour": {
     "blocklyWorkspace": "Workspace คือที่สำหรับสร้างโค้ดของคุณ",
@@ -265,16 +243,12 @@
     "easyModeChanged": "เปลี่ยนโหมดง่ายเป็น {{status}}",
     "easyModeDescription": "การตอบสนองของ AI จะง่ายขึ้น",
     "start": "เริ่มบทช่วยสอน",
-    "startTour": "ดูสิ่งที่คุณสามารถทำได้",
     "startTutorial": "บทช่วยสอนได้เลือกแล้ว",
     "title": "เลือกบทช่วยสอน",
-    "tour": "เริ่มทัวร์",
     "otherLanguage": "การสอนด้วยภาษาอื่น",
-    "otherLanguageDescription": "เนื่องจากบทช่วยสอนเหล่านี้ได้รับการแปลเพื่อนำเสนอ อาจไม่ถูกต้อง",
     "responseMode": "โหมดตอบสนอง",
     "responseModeChanged": "โหมดการตอบสนองเปลี่ยนเป็น {{mode}}",
-    "responseModeDescription": "สลับโหมดตอบกลับที่ต้องการเป็นเสียงหรือข้อความ",
-    "yourLanguage": "บทช่วยสอนสำหรับภาษาของคุณ"
+    "responseModeDescription": "สลับโหมดตอบกลับที่ต้องการเป็นเสียงหรือข้อความ"
   },
   "vm": {
     "outOfMemory": "เครื่องถึงขีดจำกัดหน่วยความจำแล้ว",
@@ -291,8 +265,7 @@
     "open": "เปิด",
     "save": "บันทึก",
     "text": "ข้อความ",
-    "upload": "อัปโหลด",
-    "websocketNotConnected": "ไม่ได้เชื่อมต่อ Websocket"
+    "upload": "อัปโหลด"
   },
   "toast": {
     "createdTutorial": "สร้างบทแนะนำแล้ว",
@@ -311,7 +284,6 @@
     "updatedRole": "อัปเดตบทบาทแล้ว",
     "updatedTutorial": "บทช่วยสอนที่อัปเดต",
     "updatedUser": "อัปเดตรายละเอียดผู้ใช้แล้ว",
-    "uploadedTutorial": "อัปโหลดบทแนะนำแล้ว",
     "anErrorOccurred": "เกิดข้อผิดพลาด",
     "configUpdated": "อัปเดตการกำหนดค่าแล้ว",
     "copiedToClipboard": "คัดลอก!",
